gl31-master/src/test/deca/lex/valid/complet/empty_class.deca
// Description:
//    tests de programme correct lexicalement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 18/01/2021
class Test{
}