gl31-master/src/test/deca/lex/invalid/complet/class_badident.deca
// Description:
//    tests de programme incorrect lexicalement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 18/01/2021
class Test{
    int |;
}
